# raspi-pico-grove-starter-kit

./: CMakeLists.txt  README.md
doc/: README.md
examples/: CMakeLists.txt
examples/brightness/: CMakeLists.txt  brightness.cpp
examples/lcd/: CMakeLists.txt  lcd.cpp
examples/onboard_led/: CMakeLists.txt  onboard_led.cpp
examples/temperature_humidity/: CMakeLists.txt  temperature_humidity.cpp
src/: CMakeLists.txt  dht11.cpp  dht11.h  lcd_1602.cpp  lcd_1602.h  light_sensor.cpp  light_sensor.h  pin_assignment.h  utils.h
tool/: CMakeLists.txt
tool/temperature_humidity_app/: CMakeLists.txt  temperature_humidity_app.cpp
tool/usb_serial_app/: CMakeLists.txt  usb_serial.cpp
